@@ -1,3 +1,14 @@
+2007-02-05  William Jon McCann  <mccann@jhu.edu>
+
+	* Makefile.am:
+	* gsd-media-keys-window.c: (load_pixbuf), (render_eject),
+	(draw_eject), (draw_action_eject), (draw_waves), (draw_speaker),
+	(render_speaker), (draw_volume_boxes), (draw_action_volume),
+	(on_expose_event):
+	* test-media-window.c: (update_state), (test_window), (main):
+	Make the new volume overlay window follow the
+	icon and color themes.  Add an unstalled test app. Fixes #403320
+
 2007-02-03  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Paolo Borelli <pborelli@katamail.com>
